<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="header">My Nanodegree Apps</string>
    <!-- Udacity nanodegree project names -->
    <string name="project1">Popular Movies</string>
    <string name="project2">Stock Hawk</string>
    <string name="project3">Build It Bigger</string>
    <string name="project4">Make Your App Material</string>
    <string name="project5">Go Ubiquitous</string>
    <string name="project6">Capstone</string>
</resources>
