<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bearembrace.myappportfolio.MainActivity"
    android:background="@color/colorBackground">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/header"
        style="@android:style/TextAppearance.Large" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                style="@style/PrimaryButton"
                android:text="@string/project1" />
            <Button
                style="@style/PrimaryButton"
                android:text="@string/project2" />
            <Button
                style="@style/PrimaryButton"
                android:text="@string/project3" />
            <Button
                style="@style/PrimaryButton"
                android:text="@string/project4" />
            <Button
                style="@style/PrimaryButton"
                android:text="@string/project5" />
            <Button
                style="@style/PrimaryButton"
                android:theme="@style/CapstoneButton"
                android:text="@string/project6"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
